--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -8,7 +8,7 @@ header {
     height: 66px;
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: calc(100vw - 17px) !important;
     
 }
 
