--- a/src/static/css/Layout.css
+++ b/src/static/css/Layout.css
@@ -5,6 +5,6 @@
 }
 
 .Layout{
-    width: 100vw;
+    width: calc(100vw - 17px);
     height: 100vh;
 }
